--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
   <h1> Jeffersons Rough Draft of the Declaration of Independence</h1>
   <h2> Finding the sources that he used</h2>
   
-  <p> The dull stupidity of the Negroe leaves him without any desire for instruction.</p>
-  <p> Whether the Creator originally formed these black people a little lower than other men, or that they have lost their intellectual powers through disuse, I will not assume the provice of determining; but certain it is, that a NEW NEGROE, (as those lately imported from Africa are called,) is a complete definition of insolent stupidity, nor could a more forcible means be employed for the conversion of of a deift, than fetting ne of these creatures before him, as an example of man in a state of nature, unbiassed by revelation or education </p>
-  <p> Their stupidity does not however authorize us to consider them as beasts for our use, much less to deny them all knowledge of the common salvation. </p>
-  
+  <p> He has waged cruel war against human nature itself, violating it's most sacred rights of life and liberty in the persons of a distant people who never offended him, captivating & carrying them into slavery in another hemisphere, or to incur miserable death in their transportation thither. This piratical warfare, the opprobium of INFIDEL Powers, is the warfare of the CHRISTIAN king of Great Britain. Determined to keep open a market where MEN should be bought & sold, he has prostituted his negative for suppressing every legislative attempt to prohibit or to restrain this execrable commerce. And that this assemblage of horrors might want no fact of distinguished die, he is now exciting those very people to rise in arms among us, and to purchase that liberty of which he has deprived them, by murdering the people on whom he also obtruded them: thus paying off former crimes committed against the LIBERTIES of one people, with crimes which he urges them to commit against the LIVES of another.
+  </p>
 </body>
 </html>
