--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
   <h1> Jeffersons Rough Draft of the Declaration of Independence</h1>
   <h2> Finding the sources that he used</h2>
-  
-  <p> He has waged cruel war against human nature itself, violating it's most sacred rights of life and liberty in the persons of a distant people who never offended him, captivating & carrying them into slavery in another hemisphere, or to incur miserable death in their transportation thither. This piratical warfare, the opprobium of INFIDEL Powers, is the warfare of the CHRISTIAN king of Great Britain. Determined to keep open a market where MEN should be bought & sold, he has prostituted his negative for suppressing every legislative attempt to prohibit or to restrain this execrable commerce. And that this assemblage of horrors might want no fact of distinguished die, he is now exciting those very people to rise in arms among us, and to purchase that liberty of which he has deprived them, by murdering the people on whom he also obtruded them: thus paying off former crimes committed against the LIBERTIES of one people, with crimes which he urges them to commit against the LIVES of another.
+
+  <p> A prince whose character is thus marked by every act which may define a tyrant is unfit to be the ruler of a people who mean to be free. Future ages will scarcely believe that the hardiness of one man adventured, within the short compass of twelve years only, to lay a foundation so broad & so undisguised for tyranny over a people fostered & fixed in principles of freedom.
+
   </p>
 </body>
 </html>
